log/build_2024-03-13_21-26-28/locobot_controller/stdout_stderr.log
running egg_info
writing ../../build/locobot_controller/locobot_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/locobot_controller/locobot_controller.egg-info/dependency_links.txt
writing entry points to ../../build/locobot_controller/locobot_controller.egg-info/entry_points.txt
writing requirements to ../../build/locobot_controller/locobot_controller.egg-info/requires.txt
writing top-level names to ../../build/locobot_controller/locobot_controller.egg-info/top_level.txt
reading manifest file '../../build/locobot_controller/locobot_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/locobot_controller/locobot_controller.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/dihim/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller/locobot_controller.py to locobot_controller.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/dihim/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller-0.0.0-py3.8.egg-info' (and everything under it)
  File "/home/dihim/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller/locobot_controller.py", line 37
    cy = int(M["m01"]/M["mOO"})
                             ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['

Copying ../../build/locobot_controller/locobot_controller.egg-info to /home/dihim/me326_ws/install/locobot_controller/lib/python3.8/site-packages/locobot_controller-0.0.0-py3.8.egg-info
running install_scripts
Installing locobot_controller script to /home/dihim/me326_ws/install/locobot_controller/lib/locobot_controller
writing list of installed files to '/home/dihim/me326_ws/build/locobot_controller/install.log'
